# learncpp

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  main.h
.cache/clangd/index/: add.cpp.04625C0DA01E3AA6.idx  add.h.3987A0EB0538020A.idx  main.cpp.75FFF756536F7D7E.idx
Math/: CMakeLists.txt  add.cpp  add.h
